parte della soluzione js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <option value="">Inserisci età</option>
                             <option value="minorenne">Minorenne</option>
                             <option value="maggiorenne">Maggiorenne</option>
-                            <option value="over 65">Over 65</option>
+                            <option value="over_65">Over 65</option>
                         </select>
                     </form>
                 </div>
@@ -54,6 +54,8 @@
         </div>
 
         <h1 class="titolo">Il tuo biglietto</h1>
+
+        <div class="contenitore"></div>
 
         <script type="text/javascript" src="js/main.js"></script>
     </body>
