--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
 
+        <!-- link css bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        
+        <!-- link style.css -->
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -55,7 +59,33 @@
 
         <h1 class="titolo">Il tuo biglietto</h1>
 
-        <div class="contenitore"></div>
+        <div class="contenitore text-dark">
+            <h4>DETTAGLIO PASSEGGERI</h4>
+            <div class="biglietto d-flex">
+                <div class="nome_passeggero bg-secondary p-3 fw-bold">
+                    <div>NOME PASSEGGERO</div>
+                    <div id="identita"></div> <!--Valore "appeso" da js-->
+                </div>
+                <div class="dettagli d-flex">
+                    <div>
+                        <div class="mb-5 fw-bold">Offerta</div>
+                        <div id="tipo_biglietto"></div>
+                    </div>
+                    <div>
+                        <div class="mb-5 fw-bold">Carrozza</div>
+                        <div id=carrozza></div>
+                    </div>
+                    <div>
+                        <div class="mb-5 fw-bold">Codice CP</div>
+                        <div id="codice_cp"></div>
+                    </div>
+                    <div>
+                        <div class="mb-5 fw-bold">Costo biglietto</div>
+                        <div id="prezzo"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script type="text/javascript" src="js/main.js"></script>
     </body>
