--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <h1 class="titolo">Il tuo biglietto</h1>
 
-        <div class="contenitore text-dark">
+        <div class="contenitore text-dark hidden">
             <h4>DETTAGLIO PASSEGGERI</h4>
             <div class="biglietto d-flex">
                 <div class="nome_passeggero bg-secondary p-3 fw-bold">
