--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="bottoni">
                 <button id="genera">Genera</button>
-                <button id="annula">Annulla</button>
+                <button id="annulla">Annulla</button>
             </div>
            
         </div>
@@ -60,29 +60,27 @@
         <h1 class="titolo">Il tuo biglietto</h1>
 
         <div class="contenitore text-dark hidden">
-            <h4>DETTAGLIO PASSEGGERI</h4>
+            <h4>DETTAGLIO PASSEGGERI</h4>  
             <div class="biglietto d-flex">
                 <div class="nome_passeggero bg-secondary p-3 fw-bold">
                     <div>NOME PASSEGGERO</div>
                     <div id="identita"></div> <!--Valore "appeso" da js-->
                 </div>
-                <div class="dettagli d-flex">
-                    <div>
-                        <div class="mb-5 fw-bold">Offerta</div>
-                        <div id="tipo_biglietto"></div>
-                    </div>
-                    <div>
-                        <div class="mb-5 fw-bold">Carrozza</div>
-                        <div id=carrozza></div>
-                    </div>
-                    <div>
-                        <div class="mb-5 fw-bold">Codice CP</div>
-                        <div id="codice_cp"></div>
-                    </div>
-                    <div>
-                        <div class="mb-5 fw-bold">Costo biglietto</div>
-                        <div id="prezzo"></div>
-                    </div>
+                <div class="flex-grow-1 ms-4 my-4">
+                    <div class="mb-5 fw-bold">Offerta</div>
+                    <div id="tipo_biglietto"></div>
+                </div>
+                <div class="flex-grow-1 my-4">
+                    <div class="mb-5 fw-bold">Carrozza</div>
+                    <div id=carrozza></div>
+                </div>
+                <div class="flex-grow-1 my-4">
+                    <div class="mb-5 fw-bold">Codice CP</div>
+                    <div id="codice_cp"></div>
+                </div>
+                <div class="flex-grow-1 my-4">
+                    <div class="mb-5 fw-bold">Costo biglietto</div>
+                    <div id="prezzo"></div>
                 </div>
             </div>
         </div>
