--- a/index.html
+++ b/index.html
@@ -22,35 +22,29 @@
 
             <div class="contenuto">
 
-                <div class="box">
-                    <h5>Nome e Cognome</h5>
-                    <form action="">
-                        <input type="text" id="nome" placeholder="Inserisci Nome e Cognome">
-                    </form>
-                </div>
+                <form class="m-4 fw-bold d-flex flex-column align-items-center">
+                    <label for="">Nome e Cognome</label>
+                    <input type="text" id="nome" placeholder="Inserisci Nome e Cognome">
+                </form>
     
-                <div class="box">
-                    <h5>Km da percorrere</h5>
-                    <form action="">
-                        <input type="text" id="km" placeholder="Inserisci km da percorrere">
-                    </form>
-                </div>
+                <form class="m-4 fw-bold d-flex flex-column align-items-center">
+                    <label for="">Km da percorrere</label>
+                    <input type="text" id="km" placeholder="Inserisci km da percorrere">
+                </form>
     
-                <div class="box">
-                    <h5>Fascia d'età</h5>
-                    <form action="">
-                        <select id="eta">
-                            <option value="">Inserisci età</option>
-                            <option value="minorenne">Minorenne</option>
-                            <option value="maggiorenne">Maggiorenne</option>
-                            <option value="over_65">Over 65</option>
-                        </select>
-                    </form>
-                </div>
+                <form class="m-4 fw-bold d-flex flex-column align-items-center">
+                    <label for="">Fascia d'età</label>
+                    <select id="eta">
+                        <option value="">Inserisci età</option>
+                        <option value="minorenne">Minorenne</option>
+                        <option value="maggiorenne">Maggiorenne</option>
+                        <option value="over_65">Over 65</option>
+                    </select>
+                </form>
 
             </div>
 
-            <div class="bottoni">
+            <div class="text-center">
                 <button id="genera">Genera</button>
                 <button id="annulla">Annulla</button>
             </div>
@@ -63,24 +57,24 @@
             <h4>DETTAGLIO PASSEGGERI</h4>  
             <div class="biglietto d-flex">
                 <div class="nome_passeggero bg-secondary p-3 fw-bold">
-                    <div>NOME PASSEGGERO</div>
+                    <div class="text-uppercase">Nome passeggero</div>
                     <div id="identita"></div> <!--Valore "appeso" da js-->
                 </div>
                 <div class="flex-grow-1 ms-4 my-4">
                     <div class="mb-5 fw-bold">Offerta</div>
-                    <div id="tipo_biglietto"></div>
+                    <div id="tipo_biglietto"></div> <!--Valore "appeso" da js-->
                 </div>
                 <div class="flex-grow-1 my-4">
                     <div class="mb-5 fw-bold">Carrozza</div>
-                    <div id=carrozza></div>
+                    <div id=carrozza></div> <!--Valore "appeso" da js-->
                 </div>
                 <div class="flex-grow-1 my-4">
                     <div class="mb-5 fw-bold">Codice CP</div>
-                    <div id="codice_cp"></div>
+                    <div id="codice_cp"></div> <!--Valore "appeso" da js-->
                 </div>
                 <div class="flex-grow-1 my-4">
                     <div class="mb-5 fw-bold">Costo biglietto</div>
-                    <div id="prezzo"></div>
+                    <div id="prezzo"></div> <!--Valore "appeso" da js-->
                 </div>
             </div>
         </div>
